<resources>
    <string name="app_name">STORM_Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="rule_reminder">
        아이디어를 시각화하며 진행해요\n다듬어지지 않은 아이디어를 장려해요\n다른 사람의 아이디어를 더 발전시켜요\n주제에 집중하고 목표에 초점을 맞추어 토론해요\n한 번에 한 가지 주제로 대화를 해요\n판단은 보류해요\n아이디어의 질보다는 양을 추구해요
    </string>

    <string name="kakao_app_key">2c40dd2b9a95386f6c34a987bbdfc042</string>

    <string name="notice_canvas_mode_change">모두 변경 시 현재 입력한\n카드 내용은 삭제됩니다</string>
    <string name="ask_canvas_mode_change"> 모드로 변경하시겠습니까?</string>
    <string name="check_password">비밀번호가 일치하지 않습니다</string>
    <string name="input_password_more_char">8자 이상 입력해주세요</string>
    <string name="check_email_type">이메일 형식이 올바르지 않습니다</string>
    <string name="email_already_used">이미 사용 중인 이메일입니다</string>
    <string name="prepare_next_round">다음 라운드 준비 중</string>

    <!--New-->
    <string name="login_email_hint">이메일을 입력하세요</string>
    <string name="login_password_hint">비밀번호를 입력하세요</string>
    <string name="login_info_wrongdata">이메일/비밀번호를 확인해주세요</string>
    <string name="login_checkbox_autologin">로그인 상태 유지</string>
    <string name="login_button_login">로그인</string>
    <string name="login_info_signup">아직 회원이 아니신가요?</string>
    <string name="login_signup">가입하기</string>

    <!--MyPage-->
    <string name="mypage_user_name">사용자 이름</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_withdrawal">회원 탈퇴</string>
</resources>