<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.stormers.storm.logIn.LoginViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scrollview_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieanimation_login"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:lottie_autoPlay="true"
                app:lottie_fileName="login_0816.json"
                app:lottie_repeatCount="-1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageview_login_logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/login_symbol"
                app:layout_constraintBottom_toTopOf="@id/imageview_login_stormlogo"
                app:layout_constraintDimensionRatio="1:1.78"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.42"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_percent="0.125" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageview_login_stormlogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:src="@drawable/login_logo_storm"
                app:layout_constraintBottom_toTopOf="@id/edittext_login_email"
                app:layout_constraintEnd_toEndOf="@+id/imageview_login_logo"
                app:layout_constraintStart_toStartOf="@+id/imageview_login_logo"
                app:layout_constraintTop_toBottomOf="@id/imageview_login_logo" />

            <com.stormers.storm.view.RoundEditText
                android:id="@+id/edittext_login_email"
                setText="@={viewModel.email}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="43dp"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                app:drawable="email"
                app:layout_constraintBottom_toTopOf="@id/edittext_login_password"
                app:layout_constraintDimensionRatio="1:0.14"
                app:layout_constraintEnd_toEndOf="@id/imageview_login_stormlogo"
                app:layout_constraintStart_toStartOf="@id/imageview_login_stormlogo"
                app:layout_constraintTop_toBottomOf="@id/imageview_login_stormlogo"
                app:layout_constraintWidth_percent="0.78"
                app:removeAll="false" />

            <com.stormers.storm.view.RoundEditText
                android:id="@+id/edittext_login_password"
                setText="@={viewModel.password}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/login_password_icn"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                app:drawable="password"
                app:layout_constraintBottom_toTopOf="@id/checkbox_auto_login"
                app:layout_constraintDimensionRatio="1:0.14"
                app:layout_constraintEnd_toEndOf="@id/edittext_login_email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/edittext_login_email"
                app:layout_constraintTop_toBottomOf="@id/edittext_login_email"
                app:layout_constraintWidth_percent="0.78"
                app:removeAll="false" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_login_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/notosans_medium"
                android:text="@string/login_info_wrongdata"
                android:textColor="@color/storm_red"
                android:textSize="11dp"
                android:visibility="@{viewModel.isLoginFail() ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="@id/edittext_login_password"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/edittext_login_password"
                app:layout_constraintTop_toBottomOf="@id/edittext_login_password" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_auto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:button="@drawable/checkbox_login"
                android:checked="@={viewModel.isAutoLogin()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/edittext_login_password"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/edittext_login_password"
                app:layout_constraintTop_toBottomOf="@id/edittext_login_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_auto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_medium"
                android:text="@string/login_checkbox_autologin"
                android:textColor="@color/storm_popup_line_gray"
                android:textSize="11dp"
                app:layout_constraintBottom_toBottomOf="@id/checkbox_auto_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.02"
                app:layout_constraintStart_toEndOf="@id/checkbox_auto_login"
                app:layout_constraintTop_toTopOf="@id/checkbox_auto_login"
                app:layout_constraintVertical_bias="0.3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_white_radius"
                android:elevation="6dp"
                android:fontFamily="@font/notosans_bold"
                android:foreground="?android:selectableItemBackground"
                android:onClick="@{() -> viewModel.requestLogin()}"
                android:text="@string/login_button_login"
                android:textColor="@color/storm_gray"
                android:textSize="16dp"
                app:layout_constraintBottom_toTopOf="@id/constraintlayout_go_to_signup"
                app:layout_constraintDimensionRatio="1:0.16"
                app:layout_constraintEnd_toEndOf="@id/edittext_login_password"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/edittext_login_password"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_auto_login"
                app:layout_constraintVertical_bias="0.3"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_percent="0.806" />

            <LinearLayout
                android:id="@+id/constraintlayout_go_to_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/button_login"
                app:layout_constraintStart_toStartOf="@id/button_login"
                app:layout_constraintTop_toBottomOf="@id/button_login"
                app:layout_constraintVertical_bias="0.2">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosans_medium"
                    android:text="@string/login_info_signup"
                    android:textColor="@color/storm_popup_line_gray"
                    android:textSize="11dp" />

                <TextView
                    android:id="@+id/textview_goto_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:fontFamily="@font/notosans_bold"
                    android:text="@string/login_signup"
                    android:textColor="@color/storm_gray"
                    android:textSize="11dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>