<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="viewModel"
            type="com.stormers.storm.mypage.MyPageViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mypage.fragment.MyPageFragment">

        <include
            android:id="@+id/layout_background"
            layout="@layout/background_mypage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.19"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageview_profile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintVertical_bias="0.0"
            loadImageUrl="@{viewModel.userImage}"
            android:background="@drawable/ic_launcher_background"
            app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageview_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.99"
            app:layout_constraintVertical_bias="0.99"
            android:background="@drawable/join_profile_ic_camera"
            app:layout_constraintTop_toTopOf="@id/imageview_profile"
            app:layout_constraintBottom_toBottomOf="@id/imageview_profile"
            app:layout_constraintStart_toStartOf="@id/imageview_profile"
            app:layout_constraintEnd_toEndOf="@id/imageview_profile"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/notosans_medium"
            android:text="@string/mypage_user_name"
            app:layout_constraintVertical_bias="0.15"
            android:textColor="@color/storm_popup_line_gray"
            app:layout_constraintTop_toBottomOf="@id/imageview_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/edittext_user_name" />
        
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_user_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.83"
            app:layout_constraintDimensionRatio="8:1"
            android:fontFamily="@font/notosans_bold"
            android:textColor="@color/storm_gray"
            android:textSize="16sp"
            android:text="@={viewModel.userName}"
            android:paddingStart="7dp"
            android:background="@drawable/mypage_underline_edittext"
            app:layout_constraintTop_toBottomOf="@id/textview_user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="이영진"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_rename"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.053"
            android:background="@drawable/mypage_ic_edit"
            app:layout_constraintStart_toStartOf="@id/edittext_user_name"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="@id/edittext_user_name"
            app:layout_constraintEnd_toEndOf="@id/edittext_user_name"
            app:layout_constraintBottom_toBottomOf="@id/edittext_user_name"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_logout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/mypage_logout"
            android:background="@null"
            app:layout_constraintDimensionRatio="1:0.147"
            android:fontFamily="@font/notosans_bold"
            android:textColor="@color/selector_text"
            android:textSize="16sp"
            android:textAlignment="viewStart"
            android:drawableEnd="@drawable/selector_image"
            app:layout_constraintVertical_bias="0.14"
            app:layout_constraintTop_toBottomOf="@id/edittext_user_name"
            app:layout_constraintStart_toStartOf="@id/edittext_user_name"
            app:layout_constraintEnd_toEndOf="@id/edittext_user_name"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_withdrawal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:text="@string/mypage_withdrawal"
            app:layout_constraintDimensionRatio="1:0.147"
            android:fontFamily="@font/notosans_bold"
            android:textColor="@color/selector_text"
            android:textSize="16sp"
            android:textAlignment="viewStart"
            android:drawableEnd="@drawable/selector_image"
            app:layout_constraintTop_toBottomOf="@id/button_logout"
            app:layout_constraintStart_toStartOf="@id/edittext_user_name"
            app:layout_constraintEnd_toEndOf="@id/edittext_user_name" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
